change order of endpoints for docs
